# Testik

./: .gitignore  CMakeLists.txt  main.cpp
week_1/: main.cpp
week_10/client/: CMakeLists.txt  main.cpp
week_10/server/: CMakeLists.txt  main.cpp  test.cpp
week_11/: CMakeLists.txt  Text.hpp  arkanoid.cpp  asteroids.cpp  main.cpp  minesweaper.cpp  tetris.cpp
week_12/: CMakeLists.txt
week_12/particles/: CMakeLists.txt  main.cpp  particle.cpp  pressure.cpp  pressure.hpp  system.cpp
week_2/: CMakeLists.txt  main.cpp
week_3/: CMakeLists.txt  main.cpp
week_4/: CMakeLists.txt  a.out  main.cpp
week_5/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp
week_6/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp
week_7/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp  test.cpp
week_8/: CMakeLists.txt  task1.cpp  task2.cpp  test.cpp
week_9/: CMakeLists.txt  example.cpp  main.cpp  test1.cpp
week_9/client/: CMakeLists.txt  main.cpp
week_9/server/: CMakeLists.txt  main.cpp
